--- a/Classes/ServerDetailViewController.xib
+++ b/Classes/ServerDetailViewController.xib
@@ -12,7 +12,7 @@
 		</object>
 		<object class="NSMutableArray" key="IBDocument.EditedObjectIDs">
 			<bool key="EncodedWithXMLCoder">YES</bool>
-			<integer value="24"/>
+			<integer value="4"/>
 		</object>
 		<object class="NSArray" key="IBDocument.PluginDependencies">
 			<bool key="EncodedWithXMLCoder">YES</bool>
@@ -42,10 +42,22 @@
 				<int key="NSvFlags">292</int>
 				<object class="NSMutableArray" key="NSSubviews">
 					<bool key="EncodedWithXMLCoder">YES</bool>
+					<object class="IBUIImageView" id="172411140">
+						<reference key="NSNextResponder" ref="434767828"/>
+						<int key="NSvFlags">274</int>
+						<string key="NSFrame">{{0, 44}, {768, 960}}</string>
+						<reference key="NSSuperview" ref="434767828"/>
+						<bool key="IBUIUserInteractionEnabled">NO</bool>
+						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
+						<object class="NSCustomResource" key="IBUIImage">
+							<string key="NSClassName">NSImage</string>
+							<string key="NSResourceName">silvergradient.png</string>
+						</object>
+					</object>
 					<object class="IBUIImageView" id="408289370">
 						<reference key="NSNextResponder" ref="434767828"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{119, 291}, {1000, 1000}}</string>
+						<string key="NSFrame">{{119, 191}, {1000, 1000}}</string>
 						<reference key="NSSuperview" ref="434767828"/>
 						<float key="IBUIAlpha">0.30000001192092896</float>
 						<int key="IBUIContentMode">9</int>
@@ -83,36 +95,19 @@
 					<object class="IBUITableView" id="943748223">
 						<reference key="NSNextResponder" ref="434767828"/>
 						<int key="NSvFlags">274</int>
-						<string key="NSFrame">{{58, 128}, {651, 876}}</string>
+						<string key="NSFrame">{{58, 44}, {651, 960}}</string>
 						<reference key="NSSuperview" ref="434767828"/>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 						<int key="IBUIIndicatorStyle">2</int>
 						<bool key="IBUIBouncesZoom">NO</bool>
 						<int key="IBUIStyle">1</int>
-						<int key="IBUISeparatorStyle">1</int>
+						<int key="IBUISeparatorStyle">2</int>
 						<int key="IBUISectionIndexMinimumDisplayRowCount">0</int>
 						<bool key="IBUIShowsSelectionImmediatelyOnTouchBegin">YES</bool>
 						<float key="IBUIRowHeight">44</float>
 						<float key="IBUISectionHeaderHeight">10</float>
 						<float key="IBUISectionFooterHeight">10</float>
-					</object>
-					<object class="IBUIImageView" id="143445266">
-						<reference key="NSNextResponder" ref="434767828"/>
-						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{58, 69}, {200, 51}}</string>
-						<reference key="NSSuperview" ref="434767828"/>
-						<object class="NSColor" key="IBUIBackgroundColor" id="715496210">
-							<int key="NSColorSpace">1</int>
-							<bytes key="NSRGB">MSAxIDEAA</bytes>
-						</object>
-						<int key="IBUIContentMode">9</int>
-						<bool key="IBUIUserInteractionEnabled">NO</bool>
-						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
-						<object class="NSCustomResource" key="IBUIImage">
-							<string key="NSClassName">NSImage</string>
-							<string key="NSResourceName">fedora-logo.png</string>
-						</object>
 					</object>
 					<object class="IBUIView" id="502418055">
 						<reference key="NSNextResponder" ref="434767828"/>
@@ -124,7 +119,10 @@
 								<int key="NSvFlags">317</int>
 								<string key="NSFrame">{{134, 180}, {500, 500}}</string>
 								<reference key="NSSuperview" ref="502418055"/>
-								<reference key="IBUIBackgroundColor" ref="715496210"/>
+								<object class="NSColor" key="IBUIBackgroundColor">
+									<int key="NSColorSpace">1</int>
+									<bytes key="NSRGB">MSAxIDEAA</bytes>
+								</object>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 								<object class="NSCustomResource" key="IBUIImage">
@@ -244,14 +242,6 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">logoImageView</string>
-						<reference key="source" ref="841351856"/>
-						<reference key="destination" ref="143445266"/>
-					</object>
-					<int key="connectionID">20</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">backgroundImageView</string>
 						<reference key="source" ref="841351856"/>
 						<reference key="destination" ref="408289370"/>
@@ -326,9 +316,9 @@
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<reference ref="392465773"/>
 							<reference ref="943748223"/>
-							<reference ref="143445266"/>
 							<reference ref="408289370"/>
 							<reference ref="502418055"/>
+							<reference ref="172411140"/>
 						</object>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -357,11 +347,6 @@
 							<reference ref="371392782"/>
 						</object>
 						<reference key="parent" ref="392465773"/>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">9</int>
-						<reference key="object" ref="143445266"/>
-						<reference key="parent" ref="434767828"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">19</int>
@@ -399,6 +384,11 @@
 						<reference key="object" ref="1024788067"/>
 						<reference key="parent" ref="502418055"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">41</int>
+						<reference key="object" ref="172411140"/>
+						<reference key="parent" ref="434767828"/>
+					</object>
 				</object>
 			</object>
 			<object class="NSMutableDictionary" key="flattenedProperties">
@@ -416,10 +406,10 @@
 					<string>36.IBPluginDependency</string>
 					<string>4.IBEditorWindowLastContentRect</string>
 					<string>4.IBPluginDependency</string>
+					<string>41.IBPluginDependency</string>
 					<string>6.IBPluginDependency</string>
 					<string>7.IBPluginDependency</string>
 					<string>8.IBPluginDependency</string>
-					<string>9.IBPluginDependency</string>
 				</object>
 				<object class="NSMutableArray" key="dict.values">
 					<bool key="EncodedWithXMLCoder">YES</bool>
@@ -432,7 +422,7 @@
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-					<string>{{954, 152}, {768, 1004}}</string>
+					<string>{{836, 88}, {768, 1004}}</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -456,11 +446,25 @@
 				</object>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">40</int>
+			<int key="maxID">41</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
 				<bool key="EncodedWithXMLCoder">YES</bool>
+				<object class="IBPartialClassDescription">
+					<string key="className">NSObject</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">Classes/NSObject+SBJSON.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">NSObject</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">Classes/SBJsonWriter.h</string>
+					</object>
+				</object>
 				<object class="IBPartialClassDescription">
 					<string key="className">ServerDetailViewController</string>
 					<string key="superclassName">UIViewController</string>
@@ -474,7 +478,6 @@
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<string>backgroundImageView</string>
 							<string>detailItem</string>
-							<string>logoImageView</string>
 							<string>navigationBar</string>
 							<string>noServersImage</string>
 							<string>noServersMessage</string>
@@ -486,7 +489,6 @@
 							<bool key="EncodedWithXMLCoder">YES</bool>
 							<string>UIImageView</string>
 							<string>id</string>
-							<string>UIImageView</string>
 							<string>UINavigationBar</string>
 							<string>UIImageView</string>
 							<string>UILabel</string>
@@ -803,14 +805,14 @@
 			<object class="NSArray" key="dict.sortedKeys">
 				<bool key="EncodedWithXMLCoder">YES</bool>
 				<string>fedora-large.png</string>
-				<string>fedora-logo.png</string>
 				<string>servers500.png</string>
+				<string>silvergradient.png</string>
 			</object>
 			<object class="NSMutableArray" key="dict.values">
 				<bool key="EncodedWithXMLCoder">YES</bool>
 				<string>{1000, 1000}</string>
-				<string>{188, 55}</string>
 				<string>{500, 500}</string>
+				<string>{19, 681}</string>
 			</object>
 		</object>
 		<string key="IBCocoaTouchPluginVersion">84</string>
